# cuteime

./: .gitignore  CMakeLists.txt  configure.rb  cuteime.pri  cuteime.pro  cuteimeapp.pri  cuteimedata.pri  cuteimeimports.pri  cuteimelibrary.pri  cuteimeplatform.pri  cuteimeplugin.pri  cuteimeroot.pri  cuteimerpath.pri  cuteimetest.pri
doc/: CMakeLists.txt  Doxyfile  doc.pro
doc/src/: cuteimeabstractipcobject.dox  main.dox  src.pri
share/: CMakeLists.txt  share.pri  share.pro  share.qrc
share/applications/: application.rc  applications.pri  cuteime.desktop
share/cuteime/: cuteime.pro
share/cuteime/translations/: cuteime_en.ts  cuteime_ja.ts  translations.pro
share/icons/: icons.pri
src/: CMakeLists.txt  src.pro
src/apps/: CMakeLists.txt  apps.pro
src/apps/cuteime/: CMakeLists.txt  application.cpp  application.h  cuteime.pro  main.cpp
src/imports/: CMakeLists.txt  imports.pro
src/imports/cuteime/: CMakeLists.txt
src/imports/cuteime/core/: applicationmanager.cpp  applicationmanager.h  candidatemanager.cpp  candidatemanager.h  conversionitem.cpp  conversionitem.h  core.pro  inputmethodmanager.cpp  inputmethodmanager.h  keyboardmanager.cpp  keyboardmanager.h  keymanager.cpp  keymanager.h  plugin.cpp  plugin.h  preedititem.cpp  preedititem.h  preeditmanager.cpp  preeditmanager.h  qmldir
src/imports/cuteime/gui/: Action.qml  Button.qml  CheckBox.qml  CuteimeIcon.qml  Label.qml  LineEdit.qml  PushButton.qml  RadioButton.qml  ScreenInfo.qml  StackedWidget.qml  TabWidget.qml  ToolButton.qml  Widget.qml  gui.pro  plugin.cpp  plugin.h  qmldir
src/libs/: CMakeLists.txt  libs.pro
src/libs/gtk/: CMakeLists.txt  cuteimeglobal.h  gtk.pri  gtk.pro
src/libs/gtk/debug/: cuteimedebug.c  cuteimedebug.h  debug.pri  qimsysdebug.h
src/libs/gtk/ipc/: cuteimeabstractipcobject.c  cuteimeabstractipcobject.h  cuteimeapplicationmanager.c  cuteimeapplicationmanager.h  cuteimeinputmethodmanager.c  cuteimeinputmethodmanager.h  cuteimekeyboardmanager.c  cuteimekeyboardmanager.h  cuteimekeymanager.c  cuteimekeymanager.h  cuteimepreedititem.c  cuteimepreedititem.h  cuteimepreeditmanager.c  cuteimepreeditmanager.h  dbus.h  ipc.pri
src/libs/qt/: CMakeLists.txt  cuteimeglobal.h  qt.pri  qt.pro
src/libs/qt/debug/: cuteimedebug.cpp  cuteimedebug.dox  cuteimedebug.h  debug.pri
src/libs/qt/ipc/: cuteimeabstractipcobject.cpp  cuteimeabstractipcobject.dox  cuteimeabstractipcobject.h  cuteimeapplicationmanager.cpp  cuteimeapplicationmanager.dox  cuteimeapplicationmanager.h  cuteimecandidatemanager.cpp  cuteimecandidatemanager.dox  cuteimecandidatemanager.h  cuteimeinputmethodmanager.cpp  cuteimeinputmethodmanager.h  cuteimekeyboardmanager.cpp  cuteimekeyboardmanager.h  cuteimekeymanager.cpp  cuteimekeymanager.dox  cuteimekeymanager.h  cuteimekeymanager_qws.cpp  cuteimekeymanager_win.cpp  cuteimekeymanager_x11.cpp  cuteimepreeditmanager.cpp  cuteimepreeditmanager.dox  cuteimepreeditmanager.h  dbus.cpp  dbus.h  ipc.pri
src/libs/qt/items/: cuteimeconversionitem.cpp  cuteimeconversionitem.dox  cuteimeconversionitem.h  cuteimepreedititem.cpp  cuteimepreedititem.dox  cuteimepreedititem.h  items.pri
src/libs/qt/plugins/: cuteimeabstractpluginobject.cpp  cuteimeabstractpluginobject.dox  cuteimeabstractpluginobject.h  cuteimeconverter.cpp  cuteimeconverter.dox  cuteimeconverter.h  cuteimeengine.cpp  cuteimeengine.dox  cuteimeengine.h  cuteimeenginedictionary.cpp  cuteimeenginedictionary.h  cuteimeinputmethod.cpp  cuteimeinputmethod.h  cuteimeinterpreter.cpp  cuteimeinterpreter.h  cuteimelanguage.cpp  cuteimelanguage.h  cuteimeplugin.cpp  cuteimeplugin.dox  cuteimeplugin.h  cuteimepluginmanager.cpp  cuteimepluginmanager.dox  cuteimepluginmanager.h  cuteimesettingswidget.cpp  cuteimesettingswidget.dox  cuteimesettingswidget.h  cuteimesettingswidget.ui  plugins.pri
src/libs/qt/server/: cuteimeserver.cpp  cuteimeserver.h  server.pri
src/libs/qt/test/: cuteimetest.cpp  cuteimetest.h  test.pri
src/libs/qt/utils/: cuteimecommandlineargs.cpp  cuteimecommandlineargs.h  cuteimedynamictranslator.cpp  cuteimedynamictranslator.h  cuteimekeysequence.cpp  cuteimekeysequence.dox  cuteimekeysequence.h  qbinding.cpp  qbinding.h  qboolsignal.cpp  qboolsignal.h  qmotion.cpp  qmotion.h  setproperty.cpp  setproperty.h  utils.pri
src/libs/qt/widgets/: cuteimekeywidget.cpp  cuteimekeywidget.dox  cuteimekeywidget.h  cuteimewidget.cpp  cuteimewidget.h  qimsyswidget.cpp  widgets.pri
src/plugins/: CMakeLists.txt  plugins.pro
src/plugins/clients/: clients.pro
src/plugins/clients/gtkimmodule/: cuteimeimcontext.h  gtk2qt.h  gtkimmodule.pro
src/plugins/clients/qt4immodule/: inputcontext.cpp  inputcontext.h  inputcontextplugin.cpp  inputcontextplugin.h  qt4immodule.pro
src/plugins/clients/qt5immodule/: inputcontext.cpp  inputcontext.h  qt5immodule.pro
src/plugins/clients/qt6immodule/: cuteime.json  inputcontext.cpp  main.cpp  qt6immodule.pro
src/plugins/clients/xim/: client.cpp  client.h  inputcontext.cpp  inputcontext.h  object.cpp  object.h  plugin.cpp  plugin.h  preeditwidget.cpp  preeditwidget.h  qabstractinputmethod.cpp  qabstractinputmethod.h  qtx11.h  qximinputmethod.cpp  qximinputmethod.h  xim.pro
src/plugins/engines/japanese/: japanese.pro
src/plugins/languages/japanese/: japanese.pro  language.cpp  language.h  plugin.cpp  plugin.h
src/plugins/system/: system.pro
src/plugins/system/autostart/: autostart.pro  autostartobject.cpp  autostartobject.h  autostartplugin.cpp  autostartplugin.h
src/plugins/system/inputmethodmanager/: inputmethodmanager.pro  object.cpp  object.h  plugin.cpp  plugin.h
src/plugins/system/language/: language.pro  object.cpp  object.h  plugin.cpp  plugin.h  settings.cpp  settings.h
src/plugins/uis/: CMakeLists.txt  uis.pro
src/plugins/uis/aboutcuteime/: aboutcuteime.json  aboutcuteime.pro  object.cpp  object.h  plugin.cpp  plugin.h  widget.cpp  widget.h  (+1 more)
tests/: CMakeLists.txt
tests/system/: system.pro
tools/: CMakeLists.txt
tools/apps/gtkbutton/: gtkbutton.pro  main.c
tools/apps/gtkicon/: gtkicon.pro  main.c
tools/plugins/debug/: debug.pro
(+226 files in other folders)
